--- a/.gitignore
+++ b/.gitignore
@@ -2,20 +2,20 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-[Ll]ibrary/
-[Tt]emp/
-[Oo]bj/
-[Bb]uild/
-[Bb]uilds/
-[Ll]ogs/
-[Uu]ser[Ss]ettings/
+Rehab/[Ll]ibrary/
+Rehab/[Tt]emp/
+Rehab/[Oo]bj/
+Rehab/[Bb]uild/
+Rehab/[Bb]uilds/
+Rehab/[Ll]ogs/
+Rehab/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 [Mm]emoryCaptures/
 
 # Recordings can get excessive in size
-[Rr]ecordings/
+Rehab/[Rr]ecordings/
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
@@ -65,9 +65,9 @@ sysinfo.txt
 crashlytics-build.properties
 
 # Packed Addressables
-[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
+Rehab/[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
 
 # Temporary auto-generated Android Assets
-[Aa]ssets/[Ss]treamingAssets/aa.meta
-[Aa]ssets/[Ss]treamingAssets/aa/*
+Rehab/[Aa]ssets/[Ss]treamingAssets/aa.meta
+Rehab/[Aa]ssets/[Ss]treamingAssets/aa/*
 .DS_Store
